[gd_scene load_steps=15 format=2]

[ext_resource path="res://Missile.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.488372, 1 )
colors = PoolColorArray( 1, 0.996933, 0.988281, 1, 0.954553, 0.966797, 0.33989, 1, 0.0745098, 0.0745098, 0.0745098, 0.0352941 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.217045 ), 0.0, 5.66162, 0, 0, Vector2( 0.223684, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.207955 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
direction = Vector3( 0, 0, 1 )
spread = 3.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 196.75
angular_velocity_random = 0.3
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 0.65
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="QuadMesh" id=8]

[sub_resource type="CubeMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.172549, 0.223529, 0.231373, 1 )

[sub_resource type="CapsuleMesh" id=11]
radius = 0.2

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.160784, 0.356863, 0.917647, 1 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 0, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.81
angular_velocity = 196.75
angular_velocity_random = 0.3
damping = 60.0
angle = 720.0
angle_random = 1.0
scale = 5.0
scale_random = 0.65
color_ramp = SubResource( 4 )

[node name="Missile" type="KinematicBody"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 7.54979e-08, 1, 0, -1, 7.54979e-08, 0, 0, 0, 1, 0, 0, 0.0640047 )
shape = SubResource( 1 )

[node name="Graphics" type="Spatial" parent="."]
transform = Transform( 7.54979e-08, 1, 0, -1, 7.54979e-08, 0, 0, 0, 1, 0, 0, 0 )

[node name="TrailParticles" type="Particles" parent="Graphics"]
transform = Transform( 7.54979e-08, -1, 0, 1, 7.54979e-08, 0, 0, 0, 1, 0, 0, 2.90388 )
material_override = SubResource( 2 )
amount = 64
visibility_aabb = AABB( -25, -25, -25, 50, 50, 50 )
local_coords = false
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="Rocket" type="Spatial" parent="Graphics"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )

[node name="Fin" type="MeshInstance" parent="Graphics/Rocket"]
transform = Transform( 0.0407496, 0, 0, 0, 0.307852, 0, 0, 0, 0.218616, 0, 0, 0.676542 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Fin2" type="MeshInstance" parent="Graphics/Rocket"]
transform = Transform( -1.78122e-09, -0.307852, 0, 0.0407496, -1.34566e-08, 0, 0, 0, 0.218616, 0, 0, 0.676542 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Pod" type="MeshInstance" parent="Graphics/Rocket"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="ExplosionParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.02573 )
material_override = SubResource( 2 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 8 )

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[connection signal="timeout" from="DeleteTimer" to="." method="queue_free"]
[connection signal="timeout" from="ExplodeTimer" to="." method="explode"]
